force-app/main/default/objects/Payment__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>HDFC Bank</fullName>
            </value>
            <value>
                <fullName>Kotak Mahindra Bank</fullName>
            </value>
            <value>
                <fullName>State Bank of India</fullName>
            </value>
            <value>
                <fullName>Syndicate Bank</fullName>
            </value>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Standard Charted Bank</fullName>
            </value>
            <value>
                <fullName>ICICI Bank</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>Sounth Indian Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>