force-app/main/default/objects/Payment__c/fields/Pay_for__c.field-meta.xml
<CustomField>
    <fullName>Pay_for__c</fullName>
    <defaultValue>&quot;User Master&quot;</defaultValue>
    <label>Pay for</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pair Sharing</fullName>
            </value>
            <value>
                <fullName>User Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>