force-app/main/default/objects/Payment__c/fields/Pay_to__c.field-meta.xml
<CustomField>
    <fullName>Pay_to__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pay to</label>
    <referenceTo>User_Master__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>