force-app/main/default/objects/Payment__c/fields/Wallet_From__c.field-meta.xml
<CustomField>
    <fullName>Wallet_From__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Wallet From</label>
    <referenceTo>User_Master__c</referenceTo>
    <relationshipLabel>Payments (Wallet From)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>