force-app/main/default/objects/Payment__c/fields/Wallet_Name__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Name__c</fullName>
    <label>Wallet Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Paytm</fullName>
            </value>
            <value>
                <fullName>PhonePe</fullName>
            </value>
            <value>
                <fullName>Hungerbox</fullName>
            </value>
            <value>
                <fullName>MobiKwik</fullName>
            </value>
            <value>
                <fullName>PayU Money</fullName>
            </value>
            <value>
                <fullName>Ola Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>