force-app/main/default/objects/Payment__c/validationRules/Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Validation</fullName>
    <active>false</active>
    <description>If Users enters More than To get amount</description>
    <errorConditionFormula>Amount__c &gt;  Pay_to__r.To_Get__c</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Please Enter an Amount less than &quot;To Get&quot; of The Pay to user</errorMessage>
</ValidationRule>