force-app/main/default/objects/Payment__c/validationRules/Bank_Name_Cannot_be_empty_for_Card.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Name_Cannot_be_empty_for_Card</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Payment_Method__c) = &#39;Card&#39;  &amp;&amp;   ISBLANK(TEXT( Bank_Name__c ))</errorConditionFormula>
    <errorDisplayField>Bank_Name__c</errorDisplayField>
    <errorMessage>Bank Name Cannot be empty for Card Transactions</errorMessage>
</ValidationRule>