force-app/main/default/objects/Payment__c/validationRules/Same_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_Users</fullName>
    <active>true</active>
    <description>The Wallet from User and Pay to user is Same</description>
    <errorConditionFormula>Wallet_From__c == Pay_to__c</errorConditionFormula>
    <errorDisplayField>Pay_to__c</errorDisplayField>
    <errorMessage>Please Select a different user. Both Users cannot be same</errorMessage>
</ValidationRule>