force-app/main/default/objects/Payment__c/validationRules/Wallet_Name_Cannot_be_empty_for_Card.validationRule-meta.xml
<ValidationRule>
    <fullName>Wallet_Name_Cannot_be_empty_for_Card</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Payment_Method__c) = &#39;Wallet&#39; &amp;&amp; ISBLANK(TEXT(Wallet_Name__c))</errorConditionFormula>
    <errorMessage>Wallet Name Cannot be empty for Wallet Transactions</errorMessage>
</ValidationRule>