force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pay_for__c</columns>
    <columns>Wallet_From__c</columns>
    <columns>Pay_to__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Transaction_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>