force-app/main/default/objects/Payment__c/listViews/All_Pairshared_Payments.listView-meta.xml
<ListView>
    <fullName>All_Pairshared_Payments</fullName>
    <columns>NAME</columns>
    <columns>Wallet_From__c</columns>
    <columns>Pay_to__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pay_for__c</field>
        <operation>equals</operation>
        <value>Pair Sharing</value>
    </filters>
    <label>All Pairshared Payments</label>
</ListView>